Correction de mes bugs de merde car je suis un mauvais développeur. Et j'ai besoin de l'aide de christophe pour lire des annotations doctrine

--- a/src/Sesile/ClasseurBundle/Resources/views/Actions/historique.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Actions/historique.html.twig
@@ -1,12 +1,18 @@
 <table class="table tableau">
     <thead>
         <tr>
-            <th>tetete</th>
-            <th>tete</th>
-            <th>tetet</th>
+            <th>Utilisateur</th>
+            <th>Date</th>
+            <th>Action</th>
         </tr>
     </thead>
-    {% for action in classeur.actions %}
-
+    <tbody>
+    {% for action in  actions %}
+        <tr>
+            <td>{{ action.username }}</td>
+            <td>{{ action.date | date("d/m/Y H:i:s") }}</td>
+            <td>{{ action.action }}</td>
+        </tr>
     {% endfor %}
+    </tbody>
 </table>
