--- a/web/css/style.css
+++ b/web/css/style.css
@@ -23,7 +23,7 @@ html, body {
 	width: auto;
 }
 
-/*-------------------------     DÉBUT MENU     -------------------------*/
+/*DÉBUT MENU*/
 #gauche {
 	background: white url("/images/vichy.png");
 	display: table-cell;
@@ -44,7 +44,7 @@ html, body {
 	margin-top: 5%;
 }
 
-/*-------------------------     FIN MENU =>  DÉBUT HEADER FOOTER     -------------------------*/
+/*HEADER FOOTER*/
 #droite {
 	min-height: 100%;
 	background-color: #eaeaea;
@@ -115,7 +115,7 @@ html, body {
 	float: right;
 }
 
-/*-------------------------     FIN HEADER FOOTER     -------------------------*/
+/*GLYPHICONS + NAMEINPUT*/
 .titre_bloc_accueil .glyphicon-home,
 .titre_bloc_accueil .glyphicon-edit,
 .titre_bloc_accueil .glyphicon-eye-open,
@@ -219,8 +219,7 @@ html, body {
 	box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(102, 175, 233, 0.6);
 }
 
-/*-------------------------     DÉBUT MENU CONNEXION    -------------------------*/
-
+/*MENU CONNEXION*/
 .menu_connexion {
 	text-align: right;
 }
@@ -243,7 +242,6 @@ html, body {
 	background-color: deeppink;
 }
 
-/*-------------------------     FIN MENU CONNEXION =>   DÉBUT TABLEAU     -------------------------*/
 /* TABLEAU */
 .tableau {
 	top: 1em;
@@ -273,6 +271,7 @@ html, body {
 	font-size: .9em;
 }
 
+/*STATUT*/
 .statut_1,
 .tl1 {
 	color: rgb(0, 131, 201);
@@ -306,8 +305,7 @@ html, body {
 
 }
 
-/* BUTTON FORMULAIRE */
-
+/* BOUTONS FORMULAIRE */
 .form_action {
 	display: inline-block;
 }
@@ -350,8 +348,6 @@ html, body {
 	color: #ca4c4d;
 }
 
-/*-------------------------     FIN TABLEAU =>   DÉBUT VRAC     -------------------------*/
-
 .fos_user_profile_edit .required {
 	color: red;
 }
@@ -367,7 +363,7 @@ html, body {
 	left: 25%;
 }
 
-/*-------------------------     FIN VRAC=>   DÉBUT FORM UTILISATEURS     -------------------------*/
+/*FORM UTILISATEURS*/
 .label_form {
 	border-bottom: 0px;
 	width: 40%;
@@ -375,10 +371,10 @@ html, body {
 
 .label_form label {
 	width: 8em;
+	line-height: 1.7em;
 	cursor: hand;
 	position: absolute;
 	color: #a9a9a9;
-	line-height: 1.7em;
 	padding: 0em 0.5em;
 	border-right: 1px solid #cccccc;
 	text-align: center;
@@ -424,7 +420,7 @@ html, body {
 	color: rgb(50, 133, 171) !important;
 }
 
-/*CHECKBOX*/
+/*CHECKBOX CREATION USER*/
 .cb-enable, .cb-disable, .cb-enable span, .cb-disable span {
 	background: url("/images/switch.gif") repeat-x;
 	display: block;
@@ -473,5 +469,3 @@ html, body {
 .acti input {
 	display: none;
 }
-
-/*-------------------------     FIN FORM UTILISATEURS=>   DÉBUT VRAC    -------------------------*/
