--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -19,13 +19,13 @@
                 </form>
             {% else %}
                 <form class="form_action" action="{{ path("classeur_valider") }}" method="post">
-                    <button type="submit" class="btn btn-success">Valider</button>
+                    <button type="submit" class="btn btn-success"> <span class="glyphicon glyphicon-ok"></span> Valider</button>
                     <input type="hidden" value="{{ classeur.id }}" name="id"/>
                 </form>
             {% endif %}
 
             <form class="form_action" action="{{ path("classeur_refuser") }}" method="post">
-                <button type="submit" class="btn btn-danger">Refuser</button>
+                <button type="submit" class="btn btn-danger"> <span class="glyphicon glyphicon-remove"></span> Refuser</button>
                 <input type="hidden" value="{{ classeur.id }}" name="id"/>
             </form>
         {% endif %}
@@ -38,12 +38,12 @@
         {% endif %}
 
         {% if classeur.isModifiable(app.user.id) %}
-            <button id="btn_modifier" type="button" class="btn btn-info">Modifier</button>
+            <button id="btn_modifier" type="button" class="btn btn-info"><span class="glyphicon glyphicon-pencil"></span>   Modifier</button>
         {% endif %}
 
         {% if classeur.isSupprimable(app.user.id) %}
-            <form class="form_action pull-right" action="{{ path("classeur_supprimer") }}" method="post">
-                <button type="submit" class="btn btn-danger">Supprimer</button>
+            <form id='suprclasseur' class="form_action pull-right" action="{{ path("classeur_supprimer") }}" method="post">
+                <button type="submit" class="btn btn-danger"><span class="glyphicon glyphicon-trash"></span>  Retirer</button>
                 <input type="hidden" value="{{ classeur.id }}" name="id"/>
             </form>
         {% endif %}
@@ -136,6 +136,23 @@
             }).on('changeDate', function (ev) {
                         ev.hide();
                     });
+
+            $("#suprclasseur").submit(function (e) {
+
+
+
+
+                if (confirm('Confirmez-vous le retrait du classeur ?')) {
+
+                } else {
+                    e.preventDefault();
+                    return false;
+
+                }
+
+
+
+            });
         </script>
     </div>
 {% endblock %}
