--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -258,6 +258,6 @@ title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br 
 </script>
 </div>
 <object id="winFirefoxPlugin" type="application/x-sharepoint" width="0" height="0"
-        style="display: none;"></object>
+        style=""></object>
 </body>
 </html>
