Un click à l'extérieur d'un document referme le panneau informations du document

--- a/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
+++ b/src/Sesile/DocumentBundle/Resources/views/Document/editForClasseur.html.twig
@@ -1,5 +1,7 @@
+<div id="doc">
 <div id="fichiers" class="dropzone"></div>
 <div id="filedescription" style="display:none"></div>
+</div>
 
 <script src="{{ asset('js/dropzone.js') }}"></script>
 <script type="text/javascript">
@@ -294,6 +296,18 @@ $(document).ready(function () {
 
 
     {% endfor %}
+
+
+    $('html').click(function() {
+        $("#filedescription").slideUp();
+        openeddesc = false;
+        currentDocHtml = null;
+        launchtim = false;
+    });
+
+    $('#doc').click(function(event){
+        event.stopPropagation();
+    });
 
 
 });
