Suite des corrections suite à la réunion avec l'équipe fonctionnelle

--- a/src/Sesile/ClasseurBundle/Resources/views/Actions/historique.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Actions/historique.html.twig
@@ -1,5 +1,5 @@
-<table class="table tableau">
-    <thead>
+<table class="table tableau dtables">
+<thead>
         <tr>
             <th>Utilisateur</th>
             <th>Date</th>
