--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/legende.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/legende.html.twig
@@ -1,16 +1,19 @@
-<div class="legende">
-    <span class="glyphicon statut_1"></span>
-    <span class="texte_legende tl1">&nbsp;Classeur en cours</span>
-    <br>
-    <span class="glyphicon statut_0"></span>
-    <span class="texte_legende tl0">&nbsp;Classeur refusé</span>
-    <br>
-    <span class="glyphicon statut_2"></span>
-    <span class="texte_legende tl2">&nbsp;Classeur finalisé</span>
-    <br>
-    <span class="glyphicon statut_3"></span>
-    <span class="texte_legende tl3">&nbsp;Classeur retiré</span>
-    <br>
-    <span class="glyphicon statut_4"></span>
-    <span class="texte_legende tl4">&nbsp;Classeur retracté</span>
-</div>
+<fieldset>
+    <legend>Légende</legend>
+    <div class="legende">
+        <span class="glyphicon statut_1"></span>
+        <span class="texte_legende tl1">&nbsp;Classeur en cours</span>
+        <br>
+        <span class="glyphicon statut_0"></span>
+        <span class="texte_legende tl0">&nbsp;Classeur refusé</span>
+        <br>
+        <span class="glyphicon statut_2"></span>
+        <span class="texte_legende tl2">&nbsp;Classeur finalisé</span>
+        <br>
+        <span class="glyphicon statut_3"></span>
+        <span class="texte_legende tl3">&nbsp;Classeur retiré</span>
+        <br>
+        <span class="glyphicon statut_4"></span>
+        <span class="texte_legende tl4">&nbsp;Classeur retracté</span>
+    </div>
+</fieldset>
