--- a/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/menu.html.twig
@@ -2,8 +2,8 @@
     <div class="menu">
         <ul>
             <li class="menu-elem menu-bleu">
-                <div class="dd-toggle entete-menu {% if( '/classeur/' in app.request.requestUri ) %}titremenu{% endif %}">
-                    <a href="#">
+                <div class="dd-toggle entete-menu {% if( 'classeur' in app.request.requestUri ) %}titremenu{% endif %}">
+                <a href="#">
                         <div class="rectanglemenu" id="bleuclair"></div>
                         Classeurs<b class="caret carette"></b></a>
                 </div>
