--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
@@ -31,7 +31,7 @@
             "iDisplayLength": 15,
             "sDom": 'ift<"footer_datatables"p>',
             "aoColumnDefs": [
-                { "bSortable": false, "aTargets": [ 3 ] }
+                { "bSortable": false, "aTargets": [ 4, 5 ] }
             ],
             "sPaginationType": "full_numbers"
         });
