--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -34,7 +34,7 @@
 <div id="maman">
 <div id="gauche">
     <a href="{{ app.request.getBaseURL() }}">
-        <div id="logo">
+    <div id="logo">
             <img src="{{ asset("/images/badlogo.png") }}"/>
         </div>
     </a>
@@ -271,7 +271,6 @@ title="Creative Commons Attributions : <br /> Pas d'utilisation commerciale <br 
     }
 </script>
 </div>
-<object id="winFirefoxPlugin" type="application/x-sharepoint"
-        style="position: absolute; top: 2000000 px; left: 2000000 px;"></object>
+<object id="winFirefoxPlugin" type="application/x-sharepoint" style="position: absolute; top: 2000000 px; left: 2000000 px;"></object>
 </body>
 </html>
