--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/edit.html.twig
@@ -39,6 +39,7 @@
                 </script>
                 {% render url("new_circuit") %}
             </div>
+            <button class="btn btn-success" type="submit">Enregistrer</button>
         </form>
         {% include "SesileClasseurBundle:Classeur:boutons_action.html.twig" %}
         <br>
