mise en page légende + ico + sDom + iDisplayLength

--- a/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
+++ b/src/Sesile/ClasseurBundle/Resources/views/Classeur/index.html.twig
@@ -28,7 +28,8 @@
                 }
             },
             "iDisplayLength": 15,
-            "sDom": 'ift<"footer_datatables"p>',
+            "aLengthMenu": [15, 30, 50, 100],
+            "sDom": 'lift<"footer_datatables"p>',
             "aoColumnDefs": [
                 { "bSortable": false, "aTargets": [ 4, 5 ] }
             ],
