--- a/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/DelegationsBundle/Resources/views/Default/index.html.twig
@@ -29,7 +29,8 @@
                 "sEmptyTable": "Vous n'avez attribu&eacute; aucune d&eacute;l&eacute;gation "
             },
             "iDisplayLength": 15,
-            "sDom": 'ift<"footer_datatables"p>',
+            "aLengthMenu": [15, 30, 50, 100],
+            "sDom": 'lift<"footer_datatables"p>',
             "aoColumnDefs": [
                 { "bSortable": false, "aTargets": [ 3 ] }
             ],
