--- a/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/UserBundle/Resources/views/Default/index.html.twig
@@ -56,8 +56,9 @@
                         "sEmptyTable": "Aucun utilisateur &agrave; afficher"
                     }
                 },
-                "iDisplayLength": 5,
-                "sDom": 'ift<"footer_datatables"p>',
+                "iDisplayLength": 15,
+                "aLengthMenu": [15, 30, 50, 100],
+                "sDom": 'lift<"footer_datatables"p>',
                 "aoColumnDefs": [
                     { "bSortable": false, "aTargets": [ 3 ] }
                 ],
