--- a/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/index.html.twig
@@ -152,8 +152,9 @@
                                             "sLast": ""
                                         }
                                     },
-                                    "iDisplayLength": 5,
-                                    "sDom": 'ift<"footer_datatables"p>',
+                                    "iDisplayLength": 15,
+                                    "aLengthMenu": [15, 30, 50, 100],
+                                    "sDom": 'lift<"footer_datatables"p>',
                                     "aoColumnDefs": [
                                         { "bSortable": false, "aTargets": [ 4, 5 ] }
                                     ],
@@ -174,8 +175,9 @@
                                             "sLast": ""
                                         }
                                     },
-                                    "iDisplayLength": 5,
-                                    "sDom": 'ift<"footer_datatables"p>',
+                                    "iDisplayLength": 15,
+                                    "aLengthMenu": [15, 30, 50, 100],
+                                    "sDom": 'lift<"footer_datatables"p>',
                                     "aoColumnDefs": [
                                         { "bSortable": false, "aTargets": [ 4, 5 ] }
                                     ],
