Edition d'un classeur : Affiche le déposant dans un classeur existant (reste css) Ajout d'une classe pour situer le validant Seules les personnes après le validant actuel sont triables dans un circuit Gestion des collectivités

--- a/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
+++ b/src/Sesile/MainBundle/Resources/views/Default/admin.html.twig
@@ -8,7 +8,7 @@
         </div>
         <form action="{{ path('admin') }}" {{ form_enctype(form) }} method="POST">
             {{ form_label(form.msg) }}
-            {{ form_widget(form.msg) }}
+            {{ form_widget(form.msg, attr: ) }}
         </form>
     </div>
 {% endblock %}
